# discord.gd

./: .gitattributes  .gitignore  .gitmodules  404.html  CHANGELOG.md  LICENSE.md  README.md  index.html  mkdocs.yml  requirements.txt  sitemap.xml
.github/: FUNDING.yml
addons/discord_gd/: LICENSE.md  README.md  discord.gd  discord.gd.uid  discord_gd.gdextension.uid  gateway.gd  gateway.gd.uid  plugin.cfg  plugin.gd  plugin.gd.uid  voice.gd  voice.gd.uid
addons/discord_gd/classes/: activity.gd  application_command.gd  application_command.gd.uid  bit_field.gd  bit_field.gd.uid  discord_interaction.gd  discord_interaction.gd.uid  embed.gd  embed.gd.uid  guild.gd  helpers.gd  helpers.gd.uid  message.gd  message.gd.uid  message_action_row.gd  message_action_row.gd.uid  message_button.gd  message_button.gd.uid  message_flags.gd  message_flags.gd.uid  permission_overwrites.gd  permissions.gd  permissions.gd.uid  select_menu.gd  select_menu.gd.uid  user.gd  user.gd.uid
advanced-bot/: index.html
classes/applicationcommand/: index.html
classes/bitfield/: index.html
classes/discordbot/: index.html
classes/discordinteraction/: index.html
classes/embed/: index.html
classes/helpers/: index.html
classes/message/: index.html
classes/messageactionrow/: index.html
classes/messagebutton/: index.html
classes/messageflags/: index.html
classes/selectmenu/: index.html
classes/user/: index.html
css/: extra.css
docs/: advanced-bot.md  getting-started.md  how-to-update.md  index.md  installation.md  simple-bot.md
docs/assets/: favicon.png.import
docs/classes/: applicationcommand.md  bitfield.md  discordbot.md  discordinteraction.md  embed.md  helpers.md  message.md  messageactionrow.md  messagebutton.md  messageflags.md  selectmenu.md  user.md
docs/css/: extra.css
docs/js/: extra.js  gdscript.min.js
gdext/: .clang-format  .gitignore  CMakeLists.txt  build.sh  build_and_install.sh  discord_gd.gdextension
gdext/src/: VoiceUDPClient.cpp  VoiceUDPClient.h  register_types.cpp  register_types.h
getting-started/: index.html
how-to-update/: index.html
installation/: index.html
js/: extra.js  highlight.min.js
sample/: addons  main.gd  main.gd.uid  main.tscn  project.godot
search/: search_index.json
simple-bot/: index.html
